#162 : Fixed some Sonar whines