@@ -91,7 +91,7 @@ public class StrategyConfigYamlRepository implements StrategyConfigRepository {
         strategiesType.getStrategies().stream()
             .filter(item -> item.getId().equals(config.getId()))
             .distinct()
-            .collect(Collectors.toList());
+            .toList();
 
     if (config.getId() == null || config.getId().isEmpty()) {
       LOG.info(() -> "About to create StrategyConfig: " + config);
@@ -155,7 +155,7 @@ public class StrategyConfigYamlRepository implements StrategyConfigRepository {
         strategiesType.getStrategies().stream()
             .filter(item -> item.getId().equals(id))
             .distinct()
-            .collect(Collectors.toList());
+            .toList();
 
     if (!strategyConfigs.isEmpty()) {
       final StrategyConfig strategyToRemove = strategyConfigs.get(0); // will only be 1 unique strat
